--- a/style.css
+++ b/style.css
@@ -257,3 +257,10 @@ footer.site-footer {
   color: #cc2222;
   font-weight: 600;
 }
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centra el contenido del header */
+  text-align: center;
+}
