--- a/style.css
+++ b/style.css
@@ -247,3 +247,8 @@ footer.site-footer {
   font-weight: 600;
 }
 
+@media (min-width: 901px) {
+  nav {
+    text-align: center; /* o right, si los quieres a la derecha */
+  }
+}
